# fathom-asmt

./: README.md  docker-compose.yml
docs/: business-flow.md  scope.md
src/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
src/backend/app/: __init__.py  config.py  main.py  schemas.py
src/backend/app/api/: auth_routes.py  drills_routes.py  ship_crew_routes.py  ship_drill_assignment_routes.py  ship_routes.py  tasks_routes.py  user_routes.py
src/backend/app/infra/auth/: role_checker.py  users.py
src/backend/app/infra/data/: database.py  seed.py
src/backend/app/infra/data/migrations/: env.py
src/backend/app/infra/data/migrations/versions/: 1f06363f65fa_maintainance_task_nullable.py  30353fb6f028_compliance_score_calculation.py  3f1ce1ab7993_added_assigne_user_id_columns.py  450f992fcbe5_added_assigne_user_id_columns_nullable.py  476b41aa33a6_add_user_table.py  51bafc9ab7db_initial.py  5da3b68d585b_maintainance_task_new_columns.py  a198f880d454_add_more_tables.py  ab1ca29c2fec_drill_table_changes.py  b1f7cb135b52_ship_type_and_imo_columns_added.py  b2f135442d35_user_auth_tables.py  c137169504eb_add_columns_to_users_table.py  da56ba45c580_assigment_active_column_added.py  fc993cae0b2f_convert_all_ids_and_fks_to_uuid.py
src/backend/app/infra/data/models/: Ship.py  ShipTask.py  TaskComment.py  TaskHistory.py  TaskNote.py  User.py  models.py
src/backend/app/schemas/: common.py
src/backend/app/services/: compliance_service.py  event_triggers.py  paginator.py
src/backend/tests/: test_main.py
(+77 files in other folders)
