[project]
name = "fathom-asmt-api"
version = "0.1.0"
description = "FastAPI service for Fathom assessment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.111.0",
    "pydantic>=2.13.3",
    "uvicorn[standard]>=0.23.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
