[project]
name = "fathom-assessment-api"
version = "0.1.0"
description = "FastAPI service for Fathom assessment"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "fastapi[standard]>=0.111.0",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.23.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
